Swagger fix